[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.5"
ksuid = "0.2.0"
lambda_http = "0.4.1"
lambda_runtime = "0.4.1"
miette = "3.3.0"
once_cell = "1.9.0"
reqwest = { version = "0.11.9", default-features = false, features = [
    "rustls-tls",
] }
scraper = "0.12.0"
serde = "1.0.136"
serde_json = "1.0.78"
sqlx = { version = "0.5.10", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.9.0", features = ["macros", "fs"] }
